--- a/Cobol2XML/Logging.html
+++ b/Cobol2XML/Logging.html
@@ -8,7 +8,7 @@ h1 {font:normal 11pt Tahoma;}
 </style>
 </head>
 <body>
-<h1>Sat May 01 12:09:28 BST 2021</h1>
+<h1>Mon May 03 12:25:05 BST 2021</h1>
 <table border="0" cellpadding="5" cellspacing="3">
 <tr align="left">
 	<th style="width:10%">Loglevel</th>
@@ -17,12 +17,12 @@ h1 {font:normal 11pt Tahoma;}
 </tr>
 <tr>
 	<td>INFO</td>
-	<td>May 01,2021 12:09</td>
+	<td>May 03,2021 12:25</td>
 	<td>Cobol2XML V0.1.0</td>
 </tr>
 <tr>
 	<td>INFO</td>
-	<td>May 01,2021 12:09</td>
+	<td>May 03,2021 12:25</td>
 	<td><?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <cobol>
     <division>identification</division>
@@ -32,6 +32,26 @@ h1 {font:normal 11pt Tahoma;}
     <year-date-written>1995</year-date-written>
     <division>data</division>
     <section>working-storage</section>
+    <Constant>
+        <Constant Name="base_2"/>
+        <base_2 Line_Number="88"/>
+        <base_2 Value="2.0"/>
+    </Constant>
+    <Constant>
+        <Constant Name="base_8"/>
+        <base_8 Line_Number="88"/>
+        <base_8 Value="8.0"/>
+    </Constant>
+    <Constant>
+        <Constant Name="base_10"/>
+        <base_10 Line_Number="88"/>
+        <base_10 Value="10.0"/>
+    </Constant>
+    <Constant>
+        <Constant Name="base_16"/>
+        <base_16 Line_Number="88"/>
+        <base_16 Value="16.0"/>
+    </Constant>
     <division>procedure</division>
 </cobol>
 </td>
